--- a/MusicClubManager.Cms.Blazor/Components/Artist/ArtistItem.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Artist/ArtistItem.razor
@@ -1,7 +1,7 @@
 ﻿<div>
     @if (Model.ImageResult is not null)
     {
-        <img src="@($"https://localhost:7188/image/{Model.ImageResult.Id}")" />
+        <img src="@($"https://localhost:7188/image/download/{Model.ImageResult.Id}")" />
     }
 
     <div>
