--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -12,9 +12,11 @@
 @using MusicClubManager.Abstractions
 @using MusicClubManager.Cms.Blazor.Components
 @using MusicClubManager.Cms.Blazor.Components.Artist
+@using MusicClubManager.Cms.Blazor.Components.Image
 @using MusicClubManager.Cms.Blazor.Components.Lineup
 @using MusicClubManager.Cms.Blazor.Components.Performance
 @using MusicClubManager.Cms.Blazor.Components.Shared
+@using MusicClubManager.Cms.Blazor.Interfaces
 @using MusicClubManager.Cms.Blazor.Models.Contexts
 @using MusicClubManager.Cms.Blazor.Models.FormModels
 @using MusicClubManager.Dto.Enums
