--- a/MusicClubManager.Cms.Blazor/Components/Image/ImageInputs.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Image/ImageInputs.razor
@@ -1,4 +1,6 @@
-﻿<div>
+﻿@inject IJSRuntime JSRuntime
+
+<div>
     <div>
         <label for="alt">Alt</label>
 
@@ -8,7 +10,12 @@
     <div>
         <label for="file">File</label>
 
-        <InputFile OnChange="(file) => Model.BrowserFile = file.File" id="file" />
+        <InputFile OnChange="HandleFileSelection" id="file" />
+
+        @if (!string.IsNullOrWhiteSpace(imagePreview))
+        {
+            <img src="@imagePreview" alt="Image Preview" style="max-width: 100%; height: auto;" />
+        }
     </div>
 </div>
 
@@ -17,4 +24,26 @@
 @code {
     [Parameter, EditorRequired]
     public required IImageFormModel Model { get; set; }
+
+    private string? imagePreview;
+
+    private async Task HandleFileSelection(InputFileChangeEventArgs e)
+    {
+        var file = e.File;
+        if (file != null)
+        {
+            Model.BrowserFile = file;
+
+            // Read the file data into a byte array
+            var buffer = new byte[file.Size];
+            await file.OpenReadStream().ReadAsync(buffer);
+
+            // Convert the byte array to a base64 string
+            var base64String = Convert.ToBase64String(buffer);
+
+
+            imagePreview = $"data:image/png;base64,{Convert.ToBase64String(buffer)}";
+        }
+
+    }
 }
