--- a/MusicClubManager.Cms.Blazor/Components/Shared/Form.razor.css
+++ b/MusicClubManager.Cms.Blazor/Components/Shared/Form.razor.css
@@ -41,11 +41,11 @@ fieldset > ::deep form {
             }
 
             fieldset > ::deep form > div > div > div {
-                align-items: center;
+       /*         align-items: center;*/
                 border: 1px solid rgb(150,150,150);
                 display: flex;
-                flex-direction: row;
-                gap: 1em;
+/*                flex-direction: row;
+*/                gap: 1em;
                 padding: .5em;
             }
 
