--- a/MusicClubManager.Cms.Blazor/Pages/Image/Edit.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Image/Edit.razor
@@ -86,7 +86,8 @@
         {
             return new EditImageFormModel
                 {
-                    Alt = imageResult.Alt
+                    Alt = imageResult.Alt,
+                    Id = imageResult.Id
                 };
         };
 
