create artist (w/ image selection)

--- a/MusicClubManager.Cms.Blazor/Components/Artist/ArtistInputs.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Artist/ArtistInputs.razor
@@ -13,11 +13,11 @@
             <InputTextArea @bind-Value="model.Description" id="description" />
         </div>
 
-        <div>
+@*         <div>
             <label for="image">Image</label>
 
             <InputFile OnChange="(file) => model.BrowserFile = file.File" id="image" />
-        </div>
+        </div> *@
     </div>
 }
 
