--- a/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
+++ b/MusicClubManager.Cms.Blazor/Pages/Artist/Index.razor
@@ -20,6 +20,8 @@
                 <ArtistItem Model="artistResult">
                     <Buttons>
                         <li><NavLink href="@($"artists/{artistResult.Id}")">Edit</NavLink></li>
+
+                        <li><NavLink>Delete</NavLink></li>
                     </Buttons>
                 </ArtistItem>
             </ItemTemplate>
