--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -10,6 +10,8 @@
 @using MusicClubManager.Cms.Blazor.Layout
 
 @using MusicClubManager.Abstractions
+@using Microsoft.AspNetCore.WebUtilities
+@using Microsoft.Extensions.Primitives
 @using MusicClubManager.Cms.Blazor.Components
 @using MusicClubManager.Cms.Blazor.Components.Artist
 @using MusicClubManager.Cms.Blazor.Components.Image
@@ -25,4 +27,6 @@
 @using MusicClubManager.Dto.Request
 @using MusicClubManager.Dto.Transfer
 @using MusicClubManager.Sdk
+
+
 
