--- a/MusicClubManager.Cms.Blazor/Components/Artist/ArtistInputs.razor
+++ b/MusicClubManager.Cms.Blazor/Components/Artist/ArtistInputs.razor
@@ -24,7 +24,7 @@
 
 @code {
     [Parameter, EditorRequired]
-    public CreateArtistFormModel? Model { get; set; }
+    public ArtistFormModel? Model { get; set; }
 
   
 }
