--- a/MusicClubManager.Cms.Blazor/Layout/EditArtistLayout.razor
+++ b/MusicClubManager.Cms.Blazor/Layout/EditArtistLayout.razor
@@ -2,10 +2,12 @@
 
 @layout ArtistLayout
 
+@inject IArtistService ArtistApiService
+
 <CascadingValue Value="Model">
     @Body
 </CascadingValue>
 
 @code {
-    public ArtistFormModel Model { get; set; } = new();
+    public ArtistFormModel? Model { get; set; }
 }
