--- a/MusicClubManager.Cms.Blazor/_Imports.razor
+++ b/MusicClubManager.Cms.Blazor/_Imports.razor
@@ -18,6 +18,7 @@
 @using MusicClubManager.Cms.Blazor.Components.Lineup
 @using MusicClubManager.Cms.Blazor.Components.Performance
 @using MusicClubManager.Cms.Blazor.Components.Shared
+@using MusicClubManager.Cms.Blazor.Extensions
 @using MusicClubManager.Cms.Blazor.Interfaces
 @using MusicClubManager.Cms.Blazor.Models.Contexts
 @using MusicClubManager.Cms.Blazor.Models.FormModels
@@ -27,6 +28,7 @@
 @using MusicClubManager.Dto.Request
 @using MusicClubManager.Dto.Transfer
 @using MusicClubManager.Sdk
+@using MusicClubManager.Sdk.Extensions
 
 
 
